--- a/pos/requirements.txt
+++ b/pos/requirements.txt
@@ -1,19 +1,73 @@
 asgiref==3.5.0
-Django==4.0.2
-djangorestframework==3.13.1
-tzdata==2021.5
+CacheControl==0.12.10
+cachetools==5.0.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.11
 cloudinary==1.29.0
 cmake==3.18.2.post1
+cryptography==36.0.1
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.13
 distlib==0.3.4
+Django==4.0.2
+django-allauth==0.48.0
 django-cloudinary-storage==0.3.0
+django-cors-headers==3.11.0
+django-oauth-toolkit==1.7.0
+djangorestframework==3.13.1
+djongo==1.3.6
+dnspython==2.2.0
+filelock==3.5.0
+firebase-admin==5.2.0
+gcloud==0.17.0
+google-api-core==2.5.0
+google-api-python-client==2.37.0
+google-auth==2.6.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.2.2
+google-cloud-firestore==2.3.4
+google-cloud-storage==2.1.0
+google-crc32c==1.3.0
+google-resumable-media==2.2.1
+googleapis-common-protos==1.54.0
+grpcio==1.43.0
+grpcio-status==1.43.0
+httplib2==0.20.4
+idna==3.3
+jwcrypto==1.0
+jws==0.1.3
+msgpack==1.0.3
+oauth2client==3.0.0
+oauthlib==3.2.0
+packaging==21.3
 Pillow==9.0.1
+platformdirs==2.5.0
+proto-plus==1.20.1
+protobuf==3.19.4
+py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pycryptodome==3.4.3
+PyJWT==2.3.0
+pymongo==3.12.3
+pyparsing==3.0.7
+Pyrebase==3.0.27
+python-jwt==2.0.1
+python3-openid==3.2.0
 pytz==2021.3
 requests==2.27.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.7.0
+retry==0.9.2
+rsa==4.8
+simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
+uritemplate==4.1.1
 urllib3==1.26.8
 virtualenv==20.13.0
-
+wrapt==1.13.3
